fixed #lan font-size on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -752,7 +752,7 @@ large screens
     #language-section > h1 {
         width: 100%;
         height: 4em;
-        font-size: 100%;
+        font-size: 3em;
     }
 
     .project-header {
